# Projects

./: README.md
AndroidLaylaApplication/: README.md
AndroidLaylaApplication/sourceCode/: build.gradle  teamprojectandroid.pem  teamprojectandroid.ppk
AndroidLaylaApplication/sourceCode/gradle/wrapper/: gradle-wrapper.properties
AndroidLaylaApplication/sourceCode/mobile/: build.gradle
AndroidLaylaApplication/sourceCode/mobile/src/main/: AndroidManifest.xml
AndroidLaylaApplication/sourceCode/mobile/src/main/res/drawable/: first_button.xml  ic_arrow_back_white_128dp.xml  ic_autorenew_white_128dp.xml  ic_bchat.xml  ic_cached_black_24dp.xml  ic_camera_alt_white_64dp.xml  ic_change_white_128dp.xml  ic_chat.xml  ic_chat_white_128dp.xml  ic_close_128dp.xml  ic_compare_arrows_black_128dp.xml  ic_delete_forever_white_128dp.xml  ic_emergency_loop.xml  ic_emoticon1_128dp.xml  ic_emoticon2_128dp.xml  ic_emoticon3_128dp.xml  ic_emoticon4_128dp.xml  ic_emoticon5_128dp.xml  ic_emoticon6_128dp.xml  ic_emoticon7_128dp.xml  ic_feedback_black_128dp.xml  ic_flight_black_128dp.xml  ic_heart_icon_red_hollow.xml  ic_heartrate_loop.xml  ic_info_white_128dp.xml  ic_local_hospital_white_128dp.xml  ic_location_loop.xml  ic_mode_edit_black_128dp.xml  ic_notebook_mood.xml  ic_power_settings_new_white_128dp.xml  ic_pulse_loop.xml  ic_red_heart_outline_clipart.xml  ic_settings_loop.xml  ic_settings_white_24dp.xml  roundcorner.xml
AndroidLaylaApplication/sourceCode/mobile/src/main/res/layout/: activity_change_doctor.xml  activity_change_password.xml  activity_chat.xml  activity_chat_hot_buttons.xml  activity_emergency_data.xml  activity_facetracker.xml  activity_finger_login.xml  activity_grid_menu.xml  activity_grid_settings.xml  activity_heart_rate.xml  activity_heart_rate_monitor.xml  activity_hot_buttons_fill.xml  activity_mainmenu.xml  activity_mainmenu_login.xml  activity_mainmenu_more.xml  activity_menu.xml  activity_new_note.xml  activity_note_editor.xml  activity_note_reader.xml  activity_notebook.xml  activity_patient_list.xml  activity_patient_search.xml  activity_patientgps.xml  activity_reset_password.xml  activity_settings.xml  activity_settings_open.xml  activity_signup.xml  activity_starter_parse.xml  (+18 more)
AndroidLaylaApplication/sourceCode/wear/: build.gradle
AndroidLaylaApplication/sourceCode/wear/src/main/: AndroidManifest.xml
C++ShipGame/: CMakeLists.txt
C++ShipGame/include/: Computer.h  Game.h  GameStrategy.h  GreedyStrategy.h  Grid.h  Human.h  Interface.h  MultiFunnel.h  OneFunnel.h  Player.h  PrimaryGrid.h  RandomStrategy.h  SecondaryGrid.h  Ship.h
C++ShipGame/src/: Computer.cpp  Game.cpp  GameStrategy.cpp  GreedyStrategy.cpp  Grid.cpp  Human.cpp  Interface.cpp  MultiFunnel.cpp  OneFunnel.cpp  Player.cpp  PrimaryGrid.cpp  RandomStrategy.cpp  SecondaryGrid.cpp  Ship.cpp  main.cpp
C++ShipGame/test/: ComputerClassTest.cpp  GameClassTest.cpp  GameStrategyClassTest.cpp  GreedyStrategyClassTest.cpp  GridClassTest.cpp  HumanClassTest.cpp  InterfaceClassTest.cpp  MultiFunnelClassTest.cpp  OneFunnelClassTest.cpp  PlayerClassTest.cpp  PrimaryGridClassTest.cpp  RandomStrategyClassTest.cpp  SecondaryGridClassTest.cpp  ShipClassTest.cpp  master.cpp
JavaSudokuGame/: .gitignore  README.md  pom.xml
JavaSudokuGame/FXSudoku/: pom.xml  save.data
JavaSudokuGame/FXSudoku/src/main/resources/fxml/: BoardScene.fxml  Scene.fxml
JavaSudokuGame/FXSudoku/src/main/resources/i18n/: MyBundle_en_EN.properties  MyBundle_pl_PL.properties
JavaSudokuGame/FXSudoku/src/main/resources/styles/: BoardScene.css  Scene.css
JavaSudokuGame/Model/: checkstyle.xml  pom.xml
JavaSudokuGame/Model/src/main/resources/exceptions/: Dao.properties  Dao_pl_PL.properties
(+75 files in other folders)
